fix spacing

--- a/webapp/web/css/ontology_editor.css
+++ b/webapp/web/css/ontology_editor.css
@@ -1,3 +1,5 @@
+
+
 .action {
 	cursor:pointer;
 }
@@ -95,14 +97,14 @@ td#uri-checkbox {
 	padding-bottom:5px;
 	border-right:1px solid #CCCCCC;
 	background-color:#F5F5F5;
-	height:680px;
+	height:800px;
 }
 
 .item-container {
 	width:53%;
 	float:left;
 	padding-left:20px;
-	height:680px;
+	height:800px;
 	font-size:14px;
 }
 
@@ -112,7 +114,7 @@ td#uri-checkbox {
 	background-color:#FBFBFB;
 	margin-left:20px;
 	padding:10px;
-	height:680px;
+	height:800px;
 	font-size:14px;
 }
 
